[package]
name = "ping"
version = "1.0.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "time"] }
